Speech And Microphone entitlements

--- a/LearningSpeechAPI/Info.plist
+++ b/LearningSpeechAPI/Info.plist
@@ -34,6 +34,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>We need speech recognition to move the ninja by voice.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to the microphone to record your voice.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
